# Lambda-Calculus

./: README.md
Proof Systems/NaturalDeduction/: CMakeLists.txt  main.cpp
Proof Systems/NaturalDeduction/Deduction/: Deduction.cpp  Deduction.h  DeductionController.cpp  DeductionController.h  Node.cpp  Node.h  Rule.cpp  Rule.h
Proof Systems/NaturalDeduction/Deduction/Rules/: ConjunctionRule.cpp  ConjunctionRule.h  DisjunctionRule.cpp  DisjunctionRule.h  ExistentialRule.cpp  ExistentialRule.h  FalseRule.cpp  FalseRule.h  ImplicationRule.cpp  ImplicationRule.h  NegationRule.cpp  NegationRule.h  Rule.cpp  Rule.h  RuleFactory.cpp  RuleFactory.h  UniversalRule.cpp  UniversalRule.h
Proof Systems/NaturalDeduction/Formulas/: BinaryLogicFormula.cpp  BinaryLogicFormula.h  Formula.cpp  Formula.h  FormulaFactory.cpp  FormulaFactory.h  LogicFormula.cpp  LogicFormula.h  SubstitutionFormula.cpp  SubstitutionFormula.h  TertiaryLogicFormula.cpp  TertiaryLogicFormula.h  UnaryLogicFormula.cpp  UnaryLogicFormula.h  Variable.cpp  Variable.h
Tasks/Substitution/: CMakeLists.txt  Solution.cpp
Tasks/Substitution/Terms/: Abstraction.cpp  Abstraction.h  Application.cpp  Application.h  LambdaTerm.h  Variable.cpp  Variable.h
